--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
               </div>
             </div>
           </li>
-          <li class="l-section section">
+          <li class="l-section section" >
             <div class="hire">
               <h2>You want us to do</h2>
               <!-- checkout formspree.io for easy form setup -->
-              <form class="work-request">
+              <form class="work-request" action="https://formspree.io/f/your-form-id" method="POST">
                 <div class="work-request--options">
                   <span class="options-a">
                     <input id="opt-1" type="checkbox" value="app design">
